# ros_tutorial

./: README.md
chapter01/: README.md
chapter02/: README.md
chapter03/: README.md
chapter03/basic_gazebo/: CMakeLists.txt  package.xml
chapter03/basic_gazebo/launch/: simple_box.launch
chapter03/basic_gazebo/urdf/: simple_box_gazebo.xacro
chapter03/basic_pub_and_sub/: CMakeLists.txt  package.xml
chapter03/basic_pub_and_sub/file/: twiststamp.txt
chapter03/basic_pub_and_sub/launch/: image_view.launch
chapter03/basic_pub_and_sub/scripts/: class_publisher.py  class_subscriber.py  get_image_and_save.py  make_image_and_pub.py  simple_publisher.py  simple_subscriber.py
chapter03/basic_rviz/: CMakeLists.txt  package.xml
chapter03/basic_rviz/launch/: express_urdf.launch  express_xacro.launch
chapter03/basic_rviz/rviz/: basic.rviz  basic_1.rviz
chapter03/basic_rviz/urdf/: simple_box.urdf  simple_box.xacro  simple_mesh.xacro
chapter03/tf_error/: CMakeLists.txt  package.xml
chapter03/tf_error/scripts/: error.py  tf_error_detect.py
chapter04/: README.md
chapter04/arm_moveit/: CMakeLists.txt  package.xml
chapter04/arm_moveit/launch/: ur3e_setup.launch
chapter04/arm_moveit/scripts/: get_joint_information.py  keybord_move.py
chapter04/cloud_practice/src/: cloud_planar_segmenter.cpp
chapter04/pointcloud_usage/: CMakeLists.txt  package.xml
chapter04/pointcloud_usage/launch/: cloud_express.launch  cloud_save.launch
chapter04/pointcloud_usage/src/: cloud_express.cpp  cloud_save.cpp
chapter05/baxter_camera/launch/: display_baxter.launch  display_baxter_camera.launch  display_baxter_kinect.launch  gazebo_baxter_kinect.launch
chapter05/baxter_camera/rviz/: basic_1.rviz
chapter05/baxter_camera/urdf/: baxter.urdf  baxter_kinect.urdf.xacro
chapter05/client_yes_plugin/: CMakeLists.txt  package.xml
chapter05/client_yes_plugin/include/client_yes_plugin/: yes_client.h
chapter05/client_yes_plugin/src/: yes_client.cpp  yes_node.cpp
chapter05/many_message/: CMakeLists.txt  package.xml
chapter05/many_message/msg/: array.msg
chapter05/plugin_first/: CMakeLists.txt  package.xml  yes_plugins.xml
chapter05/plugin_first/include/plugin_first/: yes_base.h  yes_sum.h
chapter05/plugin_first/src/: yes_base.cpp  yes_sum.cpp
chapter05/ros_param_first/: CMakeLists.txt  package.xml
chapter05/ros_param_first/config/: param2_config.yaml
chapter05/ros_param_first/launch/: rosparam1.launch  rosparam2.launch  simple_robot.launch
chapter05/ros_param_first/src/: param2_display.cpp  param_display.cpp
chapter05/ros_param_first/urdf/: simple_robot.urdf
chapter06/baxter_camera/: CMakeLists.txt  package.xml
chapter06/baxter_camera/config/: baxter_controllers.yaml
chapter06/baxter_camera/launch/: baxter_pick_and_place.launch  display_baxter.launch  display_baxter_kinect.launch  gazebo_baxter_kinect.launch
chapter06/baxter_camera/rviz/: basic_1.rviz
chapter06/baxter_camera/urdf/: baxter.urdf  baxter.urdf.xacro  baxter_camera.urdf.xacro  baxter_kinect.urdf.xacro  right_end_effector.urdf.xacro
chapter06/baxter_camera/urdf_kai/: left_end_effector.urdf.xacro
chapter06/baxter_camera/world/: picking_world.world
chapter06/baxter_moveit/: .setup_assistant  CMakeLists.txt  package.xml
chapter06/baxter_moveit/config/: baxter.srdf  baxter_controller.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml
chapter06/baxter_moveit_kai/: .setup_assistant  CMakeLists.txt  package.xml
chapter06/new_gripper/: CMakeLists.txt
chapter06/new_gripper/rviz/: next.rviz  (+4 more)
chapter06/ur3e_gripper_moveit/: .setup_assistant  CMakeLists.txt  package.xml
file/: error_2021-02-04-15-10-49.bag
(+137 files in other folders)
