<?xml version="1.0"?>
<package format="2">
  <name>client_yes_plugin</name>
  <version>0.0.0</version>
  <description>The client_yes_plugin package</description>

  <maintainer email="tsuchidashinya@todo.todo">tsuchidashinya</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>many_message</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <depend>plugin_first</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
