<?xml version="1.0"?>
<package format="2">
  <name>many_message</name>
  <version>0.0.0</version>
  <description>The many_message package</description>

  <maintainer email="tsuchidashinya@todo.todo">tsuchidashinya</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
